@@ -47,6 +47,8 @@ Improvements
 * GITHUB#12333: NumericLeafComparator#competitiveIterator makes better use of a "search after" value when paginating.
   (Chaitanya Gohel)
 
+* GITHUB#12290: Make memory fence in ByteBufferGuard explicit using `VarHandle.fullFence()`
+
 Optimizations
 ---------------------
 
